tests/baselines/reference/project/emitDecoratorMetadataCommonJSISolatedModules/node/emitDecoratorMetadataCommonJSISolatedModules.errors.txt
main.ts(1,21): error TS2307: Cannot find module 'angular2/core'.


==== main.ts (1 errors) ====
    import * as ng from "angular2/core";
                        ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'angular2/core'.
    
    declare function foo(...args: any[]);
    
    @foo
    export class MyClass1 {
        constructor(private _elementRef: ng.ElementRef){}
    }